# Tunaed_Pokemon

./: .gitignore  CLAUDE.md  README.md  build_windows.bat  pokemon_data_template.md  potential_text.md  pyproject.toml  trainer_data_template.md  trainer_qualities.md  tunaed_pokemon.spec  기본 규칙.md  부트마스 기술, 특성 목록.xlsx  트레이너 예제.md
.github/workflows/: copilot-setup-steps.yml  windows-portable-release.yml
docs/: C안_구현작업_계획.md  README.md  개발_필요요소_정리.md  기본 규칙.md  기술목록.md  기타 시스템 처리규칙.md  능력랭크 대략적 기준점 및 포텐셜 목록 효과 정리.md  새로운어장의첫걸음 저장.txt  새로운어장의첫걸음_정리.md  성좌푸키먼(가제) 세계관 설정.md  소지품목록.md  어장식 포켓몬 추가요소 설명.txt  어장식_포켓몬_추가요소_정리.md  인터뷰_답변대기.md  템플릿 포텐셜 목록.md  트레이너 샘플 2.md  트레이너 샘플 3.md  특성목록.md
docs/분할본/: README.md
docs/분할본/개발_필요요소_정리/: INDEX.md  part-001.md  part-002.md
docs/분할본/새로운어장의첫걸음_저장/: INDEX.md  part-001.txt  part-002.txt  part-003.txt  part-004.txt  part-005.txt  part-006.txt  part-007.txt  part-008.txt  part-009.txt  part-010.txt  part-011.txt  part-012.txt  part-013.txt  part-014.txt  part-015.txt  part-016.txt  part-017.txt  part-018.txt
docs/분할본/새로운어장의첫걸음_정리/: INDEX.md  part-001.md  part-002.md  (+2 more)
src/tunaed_pokemon/: __init__.py  __main__.py  app.py  main.py
src/tunaed_pokemon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_battle_engine.py  test_battle_state.py  test_database.py  test_demo_party_6v6_potential_battle.py  test_engine.py  test_events.py  test_field_state.py  test_icons.py  test_item_validator.py  test_models.py  test_stat_calc.py  test_status.py  test_trainer_example_battle.py  test_utils.py
(+60 files in other folders)
