[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunaed-pokemon"
version = "0.1.0"
description = "어장식 포켓몬 - Extended battle simulator based on the Pokémon battle system (오레마스 system)"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
tunaed-pokemon = "tunaed_pokemon.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
